--- a/Tugas1/home.html
+++ b/Tugas1/home.html
@@ -8,10 +8,7 @@
     <link rel="icon" type="image/png" href="assets/images/logo_utb.png">
 
     <!-- LINK STYLES (Jangan Dihapus)-->
-    <link
-      rel="stylesheet"
-      href="/assets/styles/bootstrap/css/bootstrap.min.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/styles/main.css" />
 
     <!-- LINK FONT (Jangan Dihapus)-->
@@ -31,7 +28,7 @@
     </div>
 
     <!-- JAVASCRIPT (Jangan Dihapus) -->
-    <script src="/assets/styles/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script/script.js"></script>
   </body>
 </html>
