--- a/Tugas1/detail_profile.html
+++ b/Tugas1/detail_profile.html
@@ -1,34 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detail Profile - Kelompok 7</title>
 
-    <link rel="icon" type="image/png" href="assets/images/logo_utb.png">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Detail Profile - Kelompok 7</title>
 
-    <!-- LINK STYLES (Jangan Dihapus)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/styles/main.css" />
+  <link rel="icon" type="image/png" href="assets/images/logo_utb.png">
 
-    <!-- LINK FONT (Jangan Dihapus)-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="container mt-5 p-0" id="main-container">
-      <!-- HEADER -->
-      <div id="header"></div>
+  <!-- LINK STYLES (Jangan Dihapus)-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/styles/main.css" />
 
-      <!-- MULAI NGODING DIDALAM SINI BRO -->
+  <!-- LINK FONT (Jangan Dihapus)-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div class="container mt-5 p-0" id="main-container">
+    <!-- HEADER -->
+    <div id="header"></div>
+
+    <div class="container-content my-5 p-5 rounded bg-white">
+      <div class="row">
+        <div class="col-12 mb-5 pt-3 pb-3 ps-4 bg-success text-white rounded">
+          <h3>Agung Yuda Pratama</h3>
+        </div>
+        <div class="col-3">
+          <img src="./assets/images/agung.jpg" alt="Agung image" class="img-fluid rounded">
+        </div>
+        <div class="col-9 mb-3">
+          <p class="content" style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+            et ligula ac
+            nunc fermentum hendrerit at in
+            est. Praesent porttitor congue facilisis. Maecenas vel lobortis ligula. Integer volutpat urna sed nulla
+            tempus, sit amet malesuada quam egestas. Duis tortor sapien, lobortis eget luctus et, consequat nec turpis.
+            Fusce laoreet quam vel felis hendrerit pulvinar. Morbi rhoncus enim et urna dictum, a finibus lacus commodo.
+            Ut bibendum augue id turpis feugiat, eu dictum tortor rutrum. Phasellus pulvinar eros sit amet molestie
+            finibus. Aliquam luctus rhoncus rutrum. In nisl lorem, sollicitudin eu orci id, aliquam laoreet purus. Donec
+            fringilla, velit sit amet bibendum condimentum, dui lorem rutrum orci, id ultricies felis elit sed erat.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et interdum neque, vel dignissim augue.
+            Aenean commodo hendrerit odio, et ultricies ligula tempus quis. Sed ac arcu augue.
+
+            Morbi scelerisque hendrerit lectus vitae imperdiet. Curabitur et massa vel dui vulputate tempus. Nullam id
+            urna auctor, ultrices metus et, gravida quam. Aliquam feugiat vel leo sit amet feugiat. Maecenas eleifend
+            vestibulum ante id scelerisque. Phasellus eget sodales eros. Nulla tristique metus ac risus posuere
+            convallis. Curabitur varius venenatis ipsum, sollicitudin placerat dui pulvinar ac. Pellentesque tristique
+            libero eget lorem iaculis, vitae molestie magna euismod.
+
+            Praesent id venenatis urna. Sed lobortis, ex eu rhoncus cursus, ligula ex scelerisque urna, nec convallis
+            lorem lorem nec massa. Sed in hendrerit est, nec venenatis mauris. Cras in sem mattis, congue elit a, luctus
+            ligula. Nunc ut venenatis lacus. Duis et neque magna. Ut ut libero sapien. Etiam eu augue id ante congue
+            ornare ut nec libero. Praesent maximus lectus nec rutrum facilisis. Sed in justo quis nibh congue luctus in
+            eu orci.</p>
+        </div>
+        <div class="col-12">
+          <p class="content" style="text-align: justify;">Pellentesque dictum nec ex quis semper. Etiam sollicitudin
+            felis mi. Donec consectetur tempor nisi eget
+            facilisis. Duis eleifend lorem cursus placerat luctus. Sed vel ligula rhoncus, faucibus nunc non, imperdiet
+            arcu. Ut sem magna, imperdiet nec vestibulum in, tincidunt vel urna. Nunc commodo augue et nibh sagittis, in
+            blandit lorem pulvinar.
+
+            Sed mauris mauris, vehicula eget eros sit amet, vestibulum blandit massa. Aliquam erat volutpat. Vestibulum
+            eget neque eget libero vestibulum egestas. Quisque placerat leo erat, at mattis elit tristique eu. Nam
+            efficitur posuere massa, accumsan pellentesque felis maximus a. Sed at leo nisi. Praesent vitae rutrum odio.
+            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat
+            volutpat. Quisque non gravida nunc. Phasellus nec lacinia dui, quis ullamcorper neque. Praesent id massa
+            ligula. Sed maximus leo vitae consequat interdum.
+
+            Proin ullamcorper tempor erat eget sagittis. Fusce nec enim dui. Sed vitae mi et est volutpat efficitur.
+            Donec sed gravida mauris, ac porta purus. Praesent in placerat magna. Curabitur tincidunt, turpis ut pretium
+            consequat, mi orci pellentesque arcu, vitae porttitor eros augue non nisi. Donec eu ligula convallis,
+            tristique ipsum a, dictum elit. Proin pretium lacus justo, quis vestibulum dolor fringilla quis. Aliquam
+            placerat tristique interdum. Suspendisse potenti. Nullam in erat in nisl ullamcorper finibus. Cras gravida
+            ligula mi, a egestas libero imperdiet eget. Maecenas elementum auctor molestie. Vivamus in mattis tellus, et
+            imperdiet mi. Donec iaculis maximus ultrices. In eu ornare lectus, sed tincidunt urna.
+            <br>
+            Written By: <strong>Agung Yuda Pratama</strong>
+            <br>
+            Tags: <a href="https://www.w3schools.com/html/" target="_blank"
+              class="text-decoration-none text-danger ">HTML</a>,
+            <a href="https://www.w3schools.com/css/" target="_blank" class="text-decoration-none text-danger ">CSS</a>,
+            <a href="https://www.w3schools.com/js/" target="_blank"
+              class="text-decoration-none text-danger ">Javascript</a>,
+            <a href="https://getbootstrap.com/" target="_blank" class="text-decoration-none text-danger ">Bootstrap</a>
+          </p>
+        </div>
+      </div>
     </div>
+    <footer>
+      <div class="container my-3">
+        <div class="row">
+          <div class="col-3 me-5 p-3 bg-white rounded">
+            <h5 class="p-3 mb-3 bg-success text-white rounded-4">Popular Post</h5>
+            <ul class="list-unstyled ps-3">
+              <li class="border-bottom py-2"><a href="https://reactjs.org/docs/getting-started.html" target="_blank"
+                  class="text-decoration-none text-danger ">React</a></li>
+              <li class="border-bottom py-2"><a href="https://vuejs.org/v2/guide/" target="_blank"
+                  class="text-decoration-none text-danger ">Vue.js</a></li>
+              <li class="border-bottom py-2"><a href="https://angular.io/docs" target="_blank"
+                  class="text-decoration-none text-danger ">Angular</a></li>
+              <li class="border-bottom py-2"><a href="https://getbootstrap.com/docs/" target="_blank"
+                  class="text-decoration-none text-danger ">Bootstrap</a></li>
+              <li class="border-bottom py-2"><a href="https://svelte.dev/docs" target="_blank"
+                  class="text-decoration-none text-danger ">Svelte</a></li>
+              <li class="border-bottom py-2"><a href="https://laravel.com/docs" target="_blank"
+                  class="text-decoration-none text-danger ">Laravel</a></li>
+              <li class="border-bottom py-2"><a href="https://docs.djangoproject.com/" target="_blank"
+                  class="text-decoration-none text-danger ">Django</a></li>
+              <li class="border-bottom py-2"><a href="https://expressjs.com/en/starter/installing.html" target="_blank"
+                  class="text-decoration-none text-danger ">Express</a></li>
+              <li class="border-bottom py-2"><a href="https://spring.io/guides" target="_blank"
+                  class="text-decoration-none text-danger ">Spring</a></li>
+              <li class="border-bottom py-2"><a href="https://flask.palletsprojects.com/" target="_blank"
+                  class="text-decoration-none text-danger ">Flask</a></li>
+            </ul>
+          </div>
 
-    <!-- JAVASCRIPT (Jangan Dihapus) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script/script.js"></script>
-  </body>
+          <div class="col-8 ms-5 p-3 bg-white rounded">
+            <h5 class="p-3 mb-3 bg-success text-white rounded-4 ">About Site</h5>
+            <p class="content p-3" style="text-align: justify;">
+              Donec placerat nisl neque, eget malesuada dolor ornare in. Nullam eget sem arcu. In consequat luctus erat,
+              ut malesuada sem semper nec. Aenean et vestibulum lacus, ac laoreet odio. Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit. Aliquam convallis orci ut erat venenatis pretium. Morbi suscipit suscipit
+              efficitur. Duis varius rhoncus mi, et euismod est tempus et. Maecenas vel suscipit magna. Donec nec ex
+              elementum sem commodo fermentum. Aliquam cursus turpis congue erat porta, sollicitudin laoreet dui
+              placerat. Phasellus eu dui vel justo condimentum aliquet eu ac eros. Sed condimentum mollis turpis ac
+              tincidunt.
+
+              Proin lacinia purus lectus, sed consequat justo blandit sed. Donec eu iaculis arcu, et pulvinar dolor.
+              Donec eu tortor eu dui feugiat rutrum tincidunt nec magna. Vestibulum pulvinar, ante eget mattis egestas,
+              ex est semper neque, eu ullamcorper leo sapien a enim. Nunc sagittis bibendum tortor, ac efficitur erat
+              dictum quis. Donec eu suscipit ipsum. Morbi sollicitudin ex enim, quis mollis sem sollicitudin quis.
+            </p>
+          </div>
+        </div>
+      </div>
+      <p class="text-center text-white">Copyright &copy; 2024 <strong>Kelompok 7 Universitas Teknologi Bandung</strong>.
+        All rights reserved. </p>
+    </footer>
+  </div>
+
+  <!-- JAVASCRIPT (Jangan Dihapus) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="script/script.js"></script>
+</body>
+
 </html>
