--- a/Tugas1/home.html
+++ b/Tugas1/home.html
@@ -25,7 +25,153 @@
       <div id="header"></div>
 
       <!-- MULAI NGODING DIDALAM SINI BRO -->
+       <div class="row">
+        <!-- SIDEBAR TINGGAL -->
+        <div class="col-md-8">
+          <!-- Content 1+1x0 -->
+          <div class="content-box mt-5">
+            <div class="title row">
+              <div class="col-md-10 ">
+                <h4 class="p-3">INI JUDUL</h4>
+              </div>
+              <div class="col-md-2 number-of-yntkts">
+                <h4 class="p-3 justify-content-center text-center">20</h4>
+              </div>
+            </div>
+            <div class="mb-5">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas autem quae illum sed ipsam quo exercitationem, minus numquam necessitatibus dolorum, mollitia sequi similique nisi rerum debitis, veniam esse atque aperiam reprehenderit. Blanditiis natus suscipit aliquam ut optio quia porro qui corporis illo! Accusamus quaerat consectetur quod doloribus molestiae, maxime tenetur quam qui repellendus, totam, soluta numquam. Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia pariatur perferendis harum eius ea expedita minima, ipsa architecto, laboriosam a consequuntur eveniet in totam aliquam. Similique vero nostrum ex, rerum harum, quis sed modi pariatur iusto, blanditiis saepe deleniti minima optio incidunt ad accusamus reprehenderit!</p>
+            </div>
+            <div class="row">
+              <div class="col-md-9">
+                <p class="fst-italic"> Written by : <span class="fw-bold">UTB</span></p>
+                <p class="fst-italic"> Tags : <span class="text-danger">HTML, CSS, JAVASCRIPT</span></p>
+              </div>
+
+              <div class="col-md-3">
+                <a href="/detail_article.html" class="btn btn-success">Continue Reading</a>
+              </div>
+            </div>
+          </div>
+          <!-- Content 90+6 -->
+          <div class="content-box mt-5">
+            <div class="title row">
+              <div class="col-md-10 ">
+                <h4 class="p-3">INI JUDUL</h4>
+              </div>
+              <div class="col-md-2 number-of-yntkts">
+                <h4 class="p-3 justify-content-center text-center">20</h4>
+              </div>
+            </div>
+            <div class="mb-5">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas autem quae illum sed ipsam quo exercitationem, minus numquam necessitatibus dolorum, mollitia sequi similique nisi rerum debitis, veniam esse atque aperiam reprehenderit. Blanditiis natus suscipit aliquam ut optio quia porro qui corporis illo! Accusamus quaerat consectetur quod doloribus molestiae, maxime tenetur quam qui repellendus, totam, soluta numquam. Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia pariatur perferendis harum eius ea expedita minima, ipsa architecto, laboriosam a consequuntur eveniet in totam aliquam. Similique vero nostrum ex, rerum harum, quis sed modi pariatur iusto, blanditiis saepe deleniti minima optio incidunt ad accusamus reprehenderit!</p>
+            </div>
+            <div class="row">
+              <div class="col-md-9">
+                <p class="fst-italic"> Written by : <span class="fw-bold">UTB</span></p>
+                <p class="fst-italic"> Tags : <span class="text-danger">HTML, CSS, JAVASCRIPT</span></p>
+              </div>
+
+              <div class="col-md-3">
+                <a href="/detail_article.html" class="btn btn-success">Continue Reading</a>
+              </div>
+            </div>
+          </div>
+          <!-- Content 100-7 -->
+          <div class="content-box mt-5">
+            <div class="title row">
+              <div class="col-md-10 ">
+                <h4 class="p-3">INI JUDUL</h4>
+              </div>
+              <div class="col-md-2 number-of-yntkts">
+                <h4 class="p-3 justify-content-center text-center">20</h4>
+              </div>
+            </div>
+            <div class="mb-5">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas autem quae illum sed ipsam quo exercitationem, minus numquam necessitatibus dolorum, mollitia sequi similique nisi rerum debitis, veniam esse atque aperiam reprehenderit. Blanditiis natus suscipit aliquam ut optio quia porro qui corporis illo! Accusamus quaerat consectetur quod doloribus molestiae, maxime tenetur quam qui repellendus, totam, soluta numquam. Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia pariatur perferendis harum eius ea expedita minima, ipsa architecto, laboriosam a consequuntur eveniet in totam aliquam. Similique vero nostrum ex, rerum harum, quis sed modi pariatur iusto, blanditiis saepe deleniti minima optio incidunt ad accusamus reprehenderit!</p>
+            </div>
+            <div class="row">
+              <div class="col-md-9">
+                <p class="fst-italic"> Written by : <span class="fw-bold">UTB</span></p>
+                <p class="fst-italic"> Tags : <span class="text-danger">HTML, CSS, JAVASCRIPT</span></p>
+              </div>
+
+              <div class="col-md-3">
+                <a href="/detail_article.html" class="btn btn-success">Continue Reading</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        
+        <!-- SIDEBAR BENAR -->
+        <div class="col-md-4">
+          <div class="content-box mt-5">
+            <!-- Content 1 -->
+            <div class="pb-2">
+              <div class="title">
+                <h4 class="p-3">Stay in touch</h4>
+              </div>
+              <div class="row  stay-text">
+                <div class="col-md-4 stay-number">
+                  <p class="p-3 justify-content-center text-center">999M</p>
+                </div>
+                <div class="col-md-8">
+                  <P class="p-3">TWITTER FOLLOWER</P>
+                </div>
+              </div>
+              <div class="row  stay-text">
+                <div class="col-md-4 stay-number">
+                  <p class="p-3 justify-content-center text-center">999M</p>
+                </div>
+                <div class="col-md-8">
+                  <P class="p-3">RSUD FEED SUBCRIBER</P>
+                </div>
+              </div>
+            </div>
+            <!-- Content 2 -->
+            <div class="pt-2">
+              <div class="title">
+                <h4 class="p-3">Kelompok</h4>
+              </div>
+              <ul class="list-group">
+                <li class="list-group-item">Asep Supriyadi ( Ketua )</li>
+                <li class="list-group-item">Agung Yuda Pratama ( Wakil Ketua )</li>
+                <li class="list-group-item">Mohammad Reihan Zakya Alawi</li>
+                <li class="list-group-item">M Zuhri Fajarudin</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+       </div>
+
+       <div class="row">
+        <div class="col-md-4">
+          <div class="content-box">
+            <div class="title">
+              <h4 class="p-3">Popular Post</h4>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item text-danger">Lorem ipsum dolor sit amet.</li>
+              <li class="list-group-item text-danger">Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+              <li class="list-group-item text-danger">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li class="list-group-item text-danger">Lorem ipsum dolor sit amet consectetur.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <div class="content-box">
+            <div class="title">
+              <h4 class="p-3">About Site</h4>
+            </div>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odit nulla beatae ipsum necessitatibus possimus autem blanditiis dignissimos enim ab voluptatem ad ratione laboriosam quo provident qui cum vitae, delectus laudantium reprehenderit dolorem reiciendis consectetur dicta. Provident iste excepturi similique ad vitae reiciendis dignissimos enim minima nam, doloremque qui dolore?</p>
+          </div>
+        </div>
+       </div>
     </div>
+
+    <footer class="footer mt-5 py-4 text-center text-light bg-dark">
+      Copyright © 2024 Universitas Teknologi Bandung. All Rights Reserved.
+    </footer>
 
     <!-- JAVASCRIPT (Jangan Dihapus) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
