--- a/Tugas1/detail_profile.html
+++ b/Tugas1/detail_profile.html
@@ -37,7 +37,9 @@
             <div class="content-box">
               <div class="title row">
                 <div class="col-md-10">
-                  <h4 class="p-3">Pria Cari Kunci, Ternyata di Tangan</h4>
+                  <h4 class="p-3" id="profile-title">
+                    Pria Cari Kunci, Ternyata di Tangan
+                  </h4>
                 </div>
                 <div class="col-md-2 number-of-yntkts">
                   <h4 class="p-3 text-center">20</h4>
