Minor Fix & Dynamic Article

--- a/Tugas1/home.html
+++ b/Tugas1/home.html
@@ -32,143 +32,10 @@
       <main class="my-4 px-1">
         <div class="row mb-4">
           <!-- SIDEBAR TINGGAL -->
-          <div class="col-md-8 d-flex flex-column gap-4">
-            <!-- Content -->
-            <div class="content-box">
-              <div class="title row">
-                <div class="col-md-10">
-                  <h4 class="p-3">Pria Cari Kunci, Ternyata di Tangan</h4>
-                </div>
-                <div class="col-md-2 number-of-yntkts">
-                  <h4 class="p-3 text-center">20</h4>
-                </div>
-              </div>
-              <div class="mb-5">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                  autem quae illum sed ipsam quo exercitationem, minus numquam
-                  necessitatibus dolorum, mollitia sequi similique nisi rerum
-                  debitis, veniam esse atque aperiam reprehenderit. Blanditiis
-                  natus suscipit aliquam ut optio quia porro qui corporis illo!
-                  Accusamus quaerat consectetur quod doloribus molestiae, maxime
-                  tenetur quam qui repellendus, totam, soluta numquam.
-                  Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia
-                  pariatur perferendis harum eius ea expedita minima, ipsa
-                  architecto, laboriosam a consequuntur eveniet in totam
-                  aliquam. Similique vero nostrum ex, rerum harum, quis sed modi
-                  pariatur iusto, blanditiis saepe deleniti minima optio
-                  incidunt ad accusamus reprehenderit!
-                </p>
-              </div>
-              <div class="row">
-                <div class="col-md-9">
-                  <p class="fst-italic">
-                    Written by : <span class="fw-bold">Kelompok 7 - UTB</span>
-                  </p>
-                  <p class="fst-italic">
-                    Tags :
-                    <span class="text-danger">HTML, CSS, JAVASCRIPT</span>
-                  </p>
-                </div>
-
-                <div class="col-md-3 text-end">
-                  <a href="/detail_article.html" class="btn btn-success"
-                    >Continue Reading</a
-                  >
-                </div>
-              </div>
-            </div>
-            <!-- Content -->
-            <div class="content-box">
-              <div class="title row">
-                <div class="col-md-10">
-                  <h4 class="p-3">Tikus Curi Camilan, Staf Kantor Heboh!</h4>
-                </div>
-                <div class="col-md-2 number-of-yntkts">
-                  <h4 class="p-3 text-center">20</h4>
-                </div>
-              </div>
-              <div class="mb-5">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                  autem quae illum sed ipsam quo exercitationem, minus numquam
-                  necessitatibus dolorum, mollitia sequi similique nisi rerum
-                  debitis, veniam esse atque aperiam reprehenderit. Blanditiis
-                  natus suscipit aliquam ut optio quia porro qui corporis illo!
-                  Accusamus quaerat consectetur quod doloribus molestiae, maxime
-                  tenetur quam qui repellendus, totam, soluta numquam.
-                  Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia
-                  pariatur perferendis harum eius ea expedita minima, ipsa
-                  architecto, laboriosam a consequuntur eveniet in totam
-                  aliquam. Similique vero nostrum ex, rerum harum, quis sed modi
-                  pariatur iusto, blanditiis saepe deleniti minima optio
-                  incidunt ad accusamus reprehenderit!
-                </p>
-              </div>
-              <div class="row">
-                <div class="col-md-9">
-                  <p class="fst-italic">
-                    Written by : <span class="fw-bold">Kelompok 7 - UTB</span>
-                  </p>
-                  <p class="fst-italic">
-                    Tags :
-                    <span class="text-danger">HTML, CSS, JAVASCRIPT</span>
-                  </p>
-                </div>
-
-                <div class="col-md-3 text-end">
-                  <a href="/detail_article.html" class="btn btn-success"
-                    >Continue Reading</a
-                  >
-                </div>
-              </div>
-            </div>
-            <!-- Content -->
-            <div class="content-box">
-              <div class="title rounded-4 row">
-                <div class="col-md-10">
-                  <h4 class="p-3">Kucing Tetangga Mogok Turun dari Atap</h4>
-                </div>
-                <div class="col-md-2 number-of-yntkts">
-                  <h4 class="p-3 text-center">20</h4>
-                </div>
-              </div>
-              <div class="mb-5">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                  autem quae illum sed ipsam quo exercitationem, minus numquam
-                  necessitatibus dolorum, mollitia sequi similique nisi rerum
-                  debitis, veniam esse atque aperiam reprehenderit. Blanditiis
-                  natus suscipit aliquam ut optio quia porro qui corporis illo!
-                  Accusamus quaerat consectetur quod doloribus molestiae, maxime
-                  tenetur quam qui repellendus, totam, soluta numquam.
-                  Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia
-                  pariatur perferendis harum eius ea expedita minima, ipsa
-                  architecto, laboriosam a consequuntur eveniet in totam
-                  aliquam. Similique vero nostrum ex, rerum harum, quis sed modi
-                  pariatur iusto, blanditiis saepe deleniti minima optio
-                  incidunt ad accusamus reprehenderit!
-                </p>
-              </div>
-              <div class="row">
-                <div class="col-md-9">
-                  <p class="fst-italic">
-                    Written by : <span class="fw-bold">Kelompok 7 - UTB</span>
-                  </p>
-                  <p class="fst-italic">
-                    Tags :
-                    <span class="text-danger">HTML, CSS, JAVASCRIPT</span>
-                  </p>
-                </div>
-
-                <div class="col-md-3 text-end">
-                  <a href="/detail_article.html" class="btn btn-success"
-                    >Continue Reading</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
+          <div
+            class="col-md-8 d-flex flex-column gap-4"
+            id="home_article"
+          ></div>
 
           <!-- SIDEBAR -->
           <div class="col-md-4">
@@ -183,19 +50,19 @@
                   <div class="row m-0 stay-text rounded-3">
                     <div class="col-md-4 stay-number">
                       <div>
-                        <p class="p-3 text-center">999M</p>
+                        <p class="p-3 text-center">7654</p>
                       </div>
                     </div>
                     <div class="col-md-8">
-                      <p class="p-3">TWITTER FOLLOWER</p>
+                      <p class="p-3">Twitter followers</p>
                     </div>
                   </div>
                   <div class="row m-0 stay-text rounded-3">
                     <div class="col-md-4 stay-number">
-                      <p class="p-3 text-center">999M</p>
+                      <p class="p-3 text-center">123</p>
                     </div>
                     <div class="col-md-8">
-                      <p class="p-3">RSUD FEED SUBCRIBER</p>
+                      <p class="p-3">RSS Feed subsribers</p>
                     </div>
                   </div>
                 </div>
@@ -207,30 +74,22 @@
                 </div>
                 <ul class="list-group">
                   <li class="list-group-item">
-                    <a
-                      href="./detail_profile.html?nama=asep"
-                    >
+                    <a href="./detail_profile.html?nama=agung">
                       Agung Yuda Pratama
                     </a>
                   </li>
                   <li class="list-group-item">
-                    <a
-                      href="./detail_profile.html?nama=agung"
-                    >
+                    <a href="./detail_profile.html?nama=asep">
                       Asep Supriyadi
                     </a>
                   </li>
                   <li class="list-group-item">
-                    <a
-                      href="./detail_profile.html?nama=reihan"
-                    >
+                    <a href="./detail_profile.html?nama=reihan">
                       Mohammad Reihan Zakya Alawi
                     </a>
                   </li>
                   <li class="list-group-item">
-                    <a
-                      href="./detail_profile.html?nama=zuhri"
-                    >
+                    <a href="./detail_profile.html?nama=zuhri">
                       Muhammad Zuhri Fajarudin
                     </a>
                   </li>
@@ -241,7 +100,32 @@
         </div>
 
         <!-- OTHER SECTION (JS GENERATED) -->
-        <div id="other_section"></div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="content-box">
+              <div class="title">
+                <h4 class="p-3">Popular Post</h4>
+              </div>
+              <ul class="list-group" id="list_post"></ul>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="content-box">
+              <div class="title">
+                <h4 class="p-3">About Site</h4>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                odit nulla beatae ipsum necessitatibus possimus autem blanditiis
+                dignissimos enim ab voluptatem ad ratione laboriosam quo
+                provident qui cum vitae, delectus laudantium reprehenderit
+                dolorem reiciendis consectetur dicta. Provident iste excepturi
+                similique ad vitae reiciendis dignissimos enim minima nam,
+                doloremque qui dolore?
+              </p>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
 
@@ -254,6 +138,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="script/main.js"></script>
+    <script type="module" src="script/main.js"></script>
   </body>
 </html>
