--- a/Tugas1/detail_article.html
+++ b/Tugas1/detail_article.html
@@ -32,12 +32,7 @@
       <main class="my-4 px-1">
         <div class="content-box mb-4">
           <div class="title row">
-            <div class="col-md-10">
-              <h4 class="p-3">Pria Cari Kunci, Ternyata di Tangan</h4>
-            </div>
-            <div class="col-md-2 number-of-yntkts">
-              <h4 class="p-3 justify-content-center text-center">20</h4>
-            </div>
+            <h4 class="p-3" id="article_title">Pria Cari Kunci, Ternyata di Tangan</h4>
           </div>
 
           <div class="my-3">
@@ -45,10 +40,11 @@
               src="./assets/images/1340762949_landing_page.jpg"
               alt="1340762949_landing_page.jpg"
               class="img-fluid rounded"
+              id="article_img"
             />
           </div>
 
-          <div class="mb-5 d-flex flex-column gap-4">
+          <div class="mb-5 d-flex flex-column gap-4" id="article_content">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
               autem quae illum sed ipsam quo exercitationem, minus numquam
@@ -95,17 +91,45 @@
           <div class="row">
             <div class="col-md-9">
               <p class="fst-italic">
-                Written by : <span class="fw-bold">Kelompok 7 - UTB</span>
+                Written by : <span class="fw-bold" id="article_author">Kelompok 7 - UTB</span>
               </p>
               <p class="fst-italic">
-                Tags : <span class="text-danger">HTML, CSS, JAVASCRIPT</span>
+                Tags :
+                <a href="https://www.w3schools.com/html/default.asp">HTML,</a> 
+                <a href="https://www.w3schools.com/css/default.asp">CSS,,</a> 
+                <a href="https://www.w3schools.com/js/default.asp">JAVASCRIPT</a> 
               </p>
             </div>
           </div>
         </div>
 
         <!-- OTHER SECTION (JS GENERATED) -->
-        <div id="other_section"></div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="content-box">
+              <div class="title">
+                <h4 class="p-3">Popular Post</h4>
+              </div>
+              <ul class="list-group" id="list_post"></ul>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="content-box">
+              <div class="title">
+                <h4 class="p-3">About Site</h4>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                odit nulla beatae ipsum necessitatibus possimus autem blanditiis
+                dignissimos enim ab voluptatem ad ratione laboriosam quo
+                provident qui cum vitae, delectus laudantium reprehenderit
+                dolorem reiciendis consectetur dicta. Provident iste excepturi
+                similique ad vitae reiciendis dignissimos enim minima nam,
+                doloremque qui dolore?
+              </p>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
 
@@ -118,6 +142,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="script/main.js"></script>
+    <script type="module" src="script/main.js"></script>
+    <script type="module" src="script/detail-article.js"></script>
   </body>
 </html>
