--- a/Tugas1/detail_profile.html
+++ b/Tugas1/detail_profile.html
@@ -36,14 +36,7 @@
           <div class="col-12">
             <div class="content-box">
               <div class="title row">
-                <div class="col-md-10">
-                  <h4 class="p-3" id="profile-title">
-                    Pria Cari Kunci, Ternyata di Tangan
-                  </h4>
-                </div>
-                <div class="col-md-2 number-of-yntkts">
-                  <h4 class="p-3 text-center">20</h4>
-                </div>
+                <h4 class="p-3" id="profile-title"></h4>
               </div>
               <div class="mb-4 d-flex flex-column gap-2">
                 <div class="row mb-3">
@@ -114,7 +107,9 @@
                   </p>
                   <p class="fst-italic">
                     Tags :
-                    <span class="text-danger">HTML, CSS, JAVASCRIPT</span>
+                    <a href="https://www.w3schools.com/html/default.asp">HTML,</a> 
+                    <a href="https://www.w3schools.com/css/default.asp">CSS,,</a> 
+                    <a href="https://www.w3schools.com/js/default.asp">JAVASCRIPT</a> 
                   </p>
                 </div>
               </div>
@@ -123,7 +118,32 @@
         </div>
 
         <!-- OTHER SECTION (JS GENERATED) -->
-        <div id="other_section"></div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="content-box">
+              <div class="title">
+                <h4 class="p-3">Popular Post</h4>
+              </div>
+              <ul class="list-group" id="list_post"></ul>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="content-box">
+              <div class="title">
+                <h4 class="p-3">About Site</h4>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                odit nulla beatae ipsum necessitatibus possimus autem blanditiis
+                dignissimos enim ab voluptatem ad ratione laboriosam quo
+                provident qui cum vitae, delectus laudantium reprehenderit
+                dolorem reiciendis consectetur dicta. Provident iste excepturi
+                similique ad vitae reiciendis dignissimos enim minima nam,
+                doloremque qui dolore?
+              </p>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
 
@@ -136,7 +156,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="script/main.js"></script>
-    <script src="script/profile.js"></script>
+    <script type="module" src="script/main.js"></script>
+    <script type="module" src="script/profile.js"></script>
   </body>
 </html>
